--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,13 @@
 fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
+# MongoDB async driver
+motor>=3.3.2
+pymongo>=4.6.1
+# Environment variables
+python-dotenv>=1.0.0
 # Gemini
 google-generativeai>=0.4.0
 # Eleven Labs
 elevenlabs>=1.0.0
+# CORS (included with fastapi, listed explicitly for clarity)
+httpx>=0.27.0
