--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,8 +6,10 @@ pymongo>=4.6.1
 # Environment variables
 python-dotenv>=1.0.0
 # Gemini
-google-generativeai>=0.4.0
+google-generativeai>=0.8.0
 # Eleven Labs
 elevenlabs>=1.0.0
 # CORS (included with fastapi, listed explicitly for clarity)
 httpx>=0.27.0
+# PDF text extraction (optional – for research PDFs)
+PyPDF2>=3.0.0
